--- a/mytest/templates/myapp/main.html
+++ b/mytest/templates/myapp/main.html
@@ -54,6 +54,18 @@ $(document).ready(function(){
         function activeLastPointToolip(chart) {
                 var points = chart.series[0].points;
                 chart.tooltip.refresh(points[points.length -1]);}
+        function realtime_data() {
+                            var data = [],
+                    time = (new Date()).getTime(),
+                    i;
+                    for(i=-19;i<=0;i+=1){
+                    data.push({
+                        x: time + i * 1000,
+                        y: 0,
+                    });
+                }
+                return data;
+        }
         var chart =Highcharts.chart('spline', {
             chart: {
                 type: 'spline',
@@ -63,23 +75,32 @@ $(document).ready(function(){
                     load: function () {
                         var series1 = this.series[0];
                         var series2 = this.series[1];
+                        var series3 = this.series[2];
+                        var series4 = this.series[3];
+                        var series5 = this.series[4];
+                        var series6 = this.series[5];
                             chart = this;
                         activeLastPointToolip(chart);
                         setInterval(function () {
-
-                            document.getElementById("test").innerText="UA="+json_data.UA;
-                            document.getElementById("test1").innerText="UB="+json_data.UB;
-
-
+                            document.getElementById("test").innerText="UA="+json_data.UA+"  UB="+json_data.UB+"  UC="+
+                            json_data.UC+"  IA="+json_data.IA+"  IB="+json_data.IB+"  IC="+json_data.IC;
                             var x = (new Date()).getTime(); // 当前时间
                             loadXMLDoc();
-                            if (data_id >= 577)
-                                data_id = 234;
-                            data_id = data_id + 1;
-                            y = json_data.UA,          //
-                            y1 = json_data.UB,          //
-                                series1.addPoint([x, y], true, true);
+                            // if (data_id >= 577)
+                            //     data_id = 234;
+                            // data_id = data_id + 1;
+                            y = json_data.UA,
+                            y1 = json_data.UB,
+                            y2 = json_data.UC,
+                            y3 = json_data.IA,
+                            y4 = json_data.IB,
+                            y5 = json_data.IC,
+                            series1.addPoint([x, y], true, true);
                             series2.addPoint([x, y1], true, true);
+                            series3.addPoint([x, y2], true, true);
+                            series4.addPoint([x, y3], true, true);
+                            series5.addPoint([x, y4], true, true);
+                            series6.addPoint([x, y5], true, true);
                             activeLastPointToolip(chart);
                         }, 1000);
                     },
@@ -116,40 +137,13 @@ $(document).ready(function(){
         exporting: {
             enabled: false
         },
-        series: [{
-            name: 'UA',
-            data: (
-                function () {
-                var data = [],
-                    time = (new Date()).getTime(),
-                    i;
-                    for(i=-19;i<=0;i+=1){
-                    data.push({
-                        x: time + i * 1000,
-                        y: 0,
-                    });
-                }
-                return data;
-            }()
-                    )
-        },
-            {
-            name: 'UB',
-            data: (
-                function () {
-                var data = [],
-                    time = (new Date()).getTime(),
-                    i;
-                    for(i=-19;i<=0;i+=1){
-                    data.push({
-                        x: time + i * 1000,
-                        y: 0,
-                    });
-                }
-                return data;
-            }()
-                    )
-        }
+        series: [
+            {name: 'UA', data: (realtime_data())},
+            {name: 'UB', data: (realtime_data())},
+            {name: 'UC', data: (realtime_data())},
+            {name: 'IA', data: (realtime_data())},
+            {name: 'IB', data: (realtime_data())},
+            {name: 'IC', data: (realtime_data())},
         ]
     });
 
