--- a/mytest/templates/myapp/main.html
+++ b/mytest/templates/myapp/main.html
@@ -108,7 +108,7 @@ $(document).ready(function(){
             },
         credits:{enabled:false},
         title: {
-            text: '幅值实时监测'
+            text: '相位实时监测'
         },
         xAxis: {
             type: 'datetime',  //指定坐标轴类型
