--- a/mytest/templates/myapp/realtimedate.html
+++ b/mytest/templates/myapp/realtimedate.html
@@ -64,7 +64,7 @@ $(document).ready(function(){
                         activeLastPointToolip(chart);
                         setInterval(function () {
                             var x = (new Date()).getTime(); // 当前时间
-                            loadXMLDoc();
+                            loadXMLDoc('realtimedate/ajax');
         document.getElementById("test").innerText="UA="+json_data.UA+"  UB="+json_data.UB+"  UC="+
         json_data.UC+"  IA="+json_data.IA+"  IB="+json_data.IB+"  IC="+json_data.IC;
                             // if (data_id >= 577)
